--- a/src/components/footerCover/footerCover.scss
+++ b/src/components/footerCover/footerCover.scss
@@ -33,5 +33,12 @@
                 font-size: .8rem;
             }
         }
+
+    }
+
+    .app-section{
+        .heading{
+            font-weight: bold;
+        }
     }
 }
