--- a/src/components/item/item.scss
+++ b/src/components/item/item.scss
@@ -1,8 +1,7 @@
-.bookGrid{
+.carousel{
     display: flex;
     gap: 1.5rem;
     flex-wrap: wrap;
-    padding: 2rem 4rem;
     font-size: 13px;
     .bookCard{
         transition: .5s;
@@ -16,11 +15,17 @@
             height: 40%;
         }
         .semi-details{
-            line-height: .8rem;
+            //line-height: 1rem;
             height: 50%;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            .title{
+                // font-size: 1.2rem;
+            }
+            .author{
+                color: grey;
+            }
             .revs{
                 display: flex;
                 justify-content: space-between;
