--- a/src/components/auth/auth.scss
+++ b/src/components/auth/auth.scss
@@ -30,6 +30,7 @@
                     background: none;
                     color: #00293F;
                     font-weight: bold;
+                    transition: .5s all ease;
                     &.change{
                         color: white;
                         background: #00293F;
